# wai

./: .gitignore  .gitmodules  .travis-setup.sh  .travis.yml  CONTRIBUTING.md  README  README.md  Repro.hs  Test.hs  appveyor.yml  cabal.project  fourmolu.yaml  hack-frontend-monadcgi.cabal  hcar-wai.tex  hcar-warp.tex  hie.yaml  images  install-all.sh  package-list.sh  run.sh  sources-travis.txt  sources.txt  stack-lts-11.yaml  stack-lts-12.yaml  stack-lts-14.yaml  stack-lts-17.yaml  stack-lts-18.yaml  stack-lts-19.yaml  stack-lts-20.yaml  stack-lts-21.yaml  stack-lts-22.yaml  stack-lts-23.yaml  stack-lts-6.yaml  stack-lts-9.yaml  stack-nightly.yaml  stack.yaml  wai-frontend-monadcgi.cabal  wai-mega.cabal
auto-update/: ChangeLog.md  README.md  auto-update.cabal
auto-update/Control/: AutoUpdate.hs  Debounce.hs  Reaper.hs
auto-update/Control/AutoUpdate/: Event.hs  Internal.hs  Thread.hs  Types.hs  Util.hs
auto-update/Control/Debounce/: Internal.hs
auto-update/Control/Reaper/: Internal.hs
auto-update/Data/: AutoUpdate.hs  AutoUpdateOld.hs
auto-update/test/Control/: AutoUpdateSpec.hs  DebounceSpec.hs  ReaperSpec.hs
mime-types/: ChangeLog.md  README.md  mime-types.cabal
mime-types/Network/: Mime.hs
recv/: ChangeLog.md  recv.cabal
recv/Network/Socket/: BufferPool.hs
recv/Network/Socket/BufferPool/: Buffer.hs  Recv.hs  Types.hs  Windows.hs
recv/test/: BufferPoolSpec.hs
time-manager/: ChangeLog.md  README.md  time-manager.cabal
time-manager/System/: ThreadManager.hs  TimeManager.hs
time-manager/System/TimeManager/: Internal.hs
time-manager/test/: Spec.hs
tls-session-manager/: ChangeLog.md  LICENSE  tls-session-manager.cabal
tls-session-manager/Network/TLS/: Imports.hs  SessionManager.hs
wai/: .ghci  ChangeLog.md  README.lhs  README.md  wai.cabal
wai-app-static/: .ghci  ChangeLog.md  Listing.hs  Mime.hs  README.md  Types.hs  Util.hs  embedded-sample.hs  sample.hs  tests.hs  wai-app-static.cabal
wai-app-static/Backend/: Embedded.hs  Filesystem.hs
wai-app-static/Network/Wai/Application/: Static.hs
wai-app-static/WaiAppStatic/: CmdLine.hs  Listing.hs  Mime.hs  Types.hs
wai-app-static/WaiAppStatic/Storage/: Embedded.hs  Filesystem.hs
wai-app-static/WaiAppStatic/Storage/Embedded/: Runtime.hs  TH.hs
wai-app-static/app/: warp-static.hs
wai-app-static/test/: EmbeddedTestEntries.hs  WaiAppEmbeddedTest.hs  WaiAppStaticTest.hs
wai-app-static/tests/: runtests.hs
wai-conduit/: ChangeLog.md  README.md  wai-conduit.cabal
wai-conduit/Network/Wai/: Conduit.hs
wai-conduit/example/: Main.hs
wai-devel/: .travis.yml  Changelog.md  README.md  refreshing.html  travis_long  wai-devel.cabal
wai-devel/src/: Devel.hs  Main.hs
wai-devel/src/Devel/: Build.hs  CmdArgs.hs  Compile.hs  Config.hs  Modules.hs  Paths.hs  ReverseProxy.hs  Types.hs  Watch.hs
wai-devel/tests/: DevelSpec.hs  MainSpec.hs
wai-devel/tests/Devel/: CmdArgsSpec.hs  ConfigSpec.hs  ReverseProxySpec.hs  WatchSpec.hs
wai-eventsource/: LICENSE  eventsource-wai.cabal  wai-eventsource.cabal
wai-eventsource/src/: EventStream.hs  Main.hs
wai-eventsource/src/Network/Wai/: EventSource.hs
wai-eventsource/static/: index.html
wai-extra/: .ghci  ChangeLog.md  README.md  proxy.hs  runtests.hs  tests.hs  wai-extra.cabal
wai-extra/Network/Wai/: EventSource.hs  Header.hs  Parse.hs  Request.hs  Search.hs  Test.hs  UrlMap.hs  Util.hs
wai-extra/Network/Wai/EventSource/: EventStream.hs
wai-extra/Network/Wai/Handler/: CGI.hs  SCGI.hs
wai-extra/Network/Wai/Middleware/: AcceptOverride.hs  AddHeaders.hs  Approot.hs  Autohead.hs  CleanPath.hs  CombineHeaders.hs  Debug.hs  ForceDomain.hs  (+19 more)
wai-extra/example/: Main.hs  index.html
wai-extra/test/: WaiExtraSpec.hs  WaiExtraTest.hs  noprecompress  sample.hs
wai-frontend-monadcgi/: ChangeLog.md  README  README.md  wai-frontend-monadcgi.cabal
wai-frontend-monadcgi/samples/: wai_cgi.hs  wai_cgi_generic.hs  wai_fastcgi.hs
wai-handler-devel/: .ghci  FullApp.hs  SmallApp.hs  run-fullapp.hs  run-onreloadapp.hs  run-smallapp.hs  wai-handler-devel-unwatched.hs  wai-handler-devel.cabal  wai-handler-devel.hs
wai-handler-devel/hamlet/: testapp.hamlet
wai-handler-fastcgi/: ChangeLog.md  README.md  wai-handler-fastcgi.cabal
wai-handler-launch/: ChangeLog.md  README.md  test.hs  wai-handler-launch.cabal  windows.c
wai-handler-scgi/: wai-handler-scgi.cabal
wai-handler-webkit/: ChangeLog.md  sample.hs  wai-handler-webkit.cabal
wai-http2-extra/: LICENSE  wai-http2-extra.cabal
wai-http2-extra/test/: doctests.hs
wai-test/: wai-test.cabal
wai-test/Network/Wai/: Test.hs
wai-websockets/: ChangeLog.md  README.md  client.html  client.js  server.lhs  wai-websockets.cabal
wai-websockets/static/: client.html  screen.css
wai/Network/: Wai.hs
wai/Network/Wai/: HTTP2.hs  Internal.hs
wai/test/Network/: WaiSpec.hs
wai/webkit-sample/: webkit-sample.hs
warp/: .ghci  ChangeLog.md  README.md  ReadInt.hs  cabal.sandbox.config  pong.hs  pong.txt  print-post.hs  runtests.hs  warp.cabal
warp-quic/: ChangeLog.md  LICENSE  warp-quic.cabal
warp-static/: warp-static.cabal  warp.hs
warp-tls/: ChangeLog.md  README.md  graceful-pong.hs  pong.hs  pong.txt  warp-tls.cabal
warp/.cabal-sandbox/: add-source-timestamps  world
warp/.cabal-sandbox/x86_64-linux-ghc-7.6.3-packages.conf.d/: package.cache  wai-2.0.0-84736808593ac301c5f654a7950d52cb.conf
warp/attic/: bigtable-single.hs  bigtable-stream.hs  file-nolen.hs  file.hs  pong.hs  print-post.hs  readInt.hs  runtests.hs  server-no-keepalive.hs  statuses.hs  undrained.hs
warp/bench/: Parser.hs  ResponseBench.hs
warp/cbits/: warp.c  warp.h
warp/test/: BufferPoolSpec.hs  ConduitSpec.hs  ConnectionSpec.hs  EarlyHintsSpec.hs  ExceptionSpec.hs  FdCacheSpec.hs  FileSpec.hs  GracefulShutdownSpec.hs  HTTP.hs  MultiMapSpec.hs  PackIntSpec.hs  PartialFileSpec.hs  ReadIntSpec.hs  RequestHeaderSpec.hs  RequestSpec.hs  ResponseHeaderSpec.hs  ResponseSpec.hs  RunSpec.hs  SendFileSpec.hs  ServerStateSpec.hs  ThreadSpec.hs  WithApplicationSpec.hs  doctests.hs  head-response  inputFile  main.hs  readInt.hs
(+115 files in other folders)
