name:            hack-frontend-monadcgi
version:         0.0.1
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Allows programs written against MonadCGI to run with any hack handler.
category:        Web
stability:       stable
cabal-version:   >= 1.2
build-type:      Simple

library
    build-depends: base >= 4 && < 5,
                   bytestring,
                   containers >= 0.2,
                   cgi,
                   hack >= 2009.5.19
    exposed-modules: Hack.Frontend.MonadCGI
    ghc-options:     -Wall
