name:            wai-frontend-monadcgi
version:         0.1.0
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Allows programs written against MonadCGI to run with any WAI handler. (deprecated)
category:        Web
stability:       stable
cabal-version:   >= 1.2
build-type:      Simple

library
    build-depends: base >= 4 && < 5,
                   bytestring,
                   containers >= 0.2,
                   cgi,
                   enumerator,
                   http-types,
                   transformers,
                   case-insensitive,
                   wai >= 0.4 && < 0.5
    exposed-modules: Network.Wai.Frontend.MonadCGI
    ghc-options:     -Wall
