name:                auto-update
version:             0.2.1
synopsis:            Efficiently run periodic, on-demand actions
description:         API docs and the README are available at <http://www.stackage.org/package/auto-update>.
homepage:            https://github.com/yesodweb/wai
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com
category:            Control
build-type:          Simple
extra-source-files:  README.md
                     ChangeLog.md
cabal-version:       >=1.10

library
  ghc-options:         -Wall
  exposed-modules:     Control.AutoUpdate
                       Control.Debounce
                       Control.Debounce.Internal
                       Control.Reaper
                       Control.Reaper.Internal
  other-modules:       Control.AutoUpdate.Util
  build-depends:       base >= 4.12 && < 5
  default-language:    Haskell2010
  if impl(ghc >= 8)
      default-extensions:  Strict StrictData

-- Test suite is currently not robust enough, gives too many false negatives.

test-suite spec
  main-is:         Spec.hs
  other-modules:   Control.AutoUpdateSpec
                   Control.DebounceSpec
                   Control.ReaperSpec
  hs-source-dirs:  test
  type:            exitcode-stdio-1.0
  build-depends:   base, auto-update, exceptions, hspec, retry, HUnit
  build-tool-depends: hspec-discover:hspec-discover
  default-language:    Haskell2010
