name:                mime-types
version:             0.1.2.0
synopsis:            Basic mime-type handling types and functions
description:         API docs and the README are available at <http://www.stackage.org/package/mime-types>.
homepage:            https://github.com/yesodweb/wai
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md ChangeLog.md

library
  exposed-modules:     Network.Mime
  default-language:    Haskell2010
  build-depends:       base           >= 4.12   && < 5
                     , containers
                     , text
                     , bytestring

source-repository head
  type:     git
  location: git://github.com/yesodweb/wai.git
