cabal-version:      >=1.10
name:               recv
version:            0.1.1
license:            BSD3
license-file:       LICENSE
maintainer:         kazu@iij.ad.jp
author:             Kazu Yamamoto
stability:          Stable
homepage:           http://github.com/yesodweb/wai
synopsis:           Efficient network recv
description:        Network recv based on buffer pools
category:           Network
build-type:         Simple
extra-source-files: ChangeLog.md

library
    exposed-modules:  Network.Socket.BufferPool
    other-modules:
        Network.Socket.BufferPool.Buffer
        Network.Socket.BufferPool.Recv
        Network.Socket.BufferPool.Types

    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.12 && <5,
        bytestring >=0.9.1.4,
        network >=3.1.0

    if impl(ghc >=8)
        default-extensions: Strict StrictData

test-suite spec
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    build-tool-depends: hspec-discover:hspec-discover
    hs-source-dirs:     test .
    other-modules:
        BufferPoolSpec
        Network.Socket.BufferPool
        Network.Socket.BufferPool.Buffer
        Network.Socket.BufferPool.Recv
        Network.Socket.BufferPool.Types

    default-language:   Haskell2010
    ghc-options:        -Wall
    build-depends:
        base >=4.12 && <5,
        bytestring >=0.9.1.4,
        network >=3.1.0,
        hspec
