Name:                time-manager
Version:             0.2.2
Synopsis:            Scalable timer
License:             MIT
License-file:        LICENSE
Author:              Michael Snoyman and Kazu Yamamoto
Maintainer:          kazu@iij.ad.jp
Homepage:            http://github.com/yesodweb/wai
Category:            System
Build-Type:          Simple
Cabal-Version:       >=1.10
Stability:           Stable
Description:         Scalable timer functions provided by a timer manager
                     and thread management functions to prevent thread
                     leak by a thread manager.
Extra-Source-Files:  ChangeLog.md

Library
  Build-Depends:     base                      >= 4.12       && < 5
                   , auto-update               >= 0.2        && < 0.3
                   , containers
                   , stm
  Default-Language:  Haskell2010
  Exposed-modules:   System.TimeManager
  Exposed-modules:   System.ThreadManager
  Ghc-Options:       -Wall
