cabal-version:      >=1.10
name:               time-manager
version:            0.3.0
license:            MIT
license-file:       LICENSE
maintainer:         kazu@iij.ad.jp
author:             Michael Snoyman and Kazu Yamamoto
stability:          Stable
homepage:           http://github.com/yesodweb/wai
synopsis:           Scalable timer
description:
    Scalable timer functions provided by a timer manager
    and thread management functions to prevent thread
    leak by a thread manager.

category:           System
build-type:         Simple
extra-source-files: ChangeLog.md

library
    exposed-modules:
        System.TimeManager
        System.ThreadManager

    default-language:   Haskell2010
    default-extensions: Strict StrictData
    ghc-options:        -Wall
    build-depends:
        base >=4.12 && <5,
        auto-update >=0.2 && <0.3,
        containers,
        stm
