cabal-version:      >=1.10
name:               time-manager
version:            0.3.1.1
license:            MIT
license-file:       LICENSE
maintainer:         kazu@iij.ad.jp
author:             Michael Snoyman and Kazu Yamamoto
stability:          Stable
homepage:           http://github.com/yesodweb/wai
synopsis:           Scalable timer
description:
    Scalable timer functions provided by a timer manager
    and thread management functions to prevent thread
    leak by a thread manager.

category:           System
build-type:         Simple
extra-source-files: ChangeLog.md
                    README.md

library
    exposed-modules:
        System.TimeManager
        System.ThreadManager
    other-modules:
        System.TimeManager.Internal

    default-language:   Haskell2010
    default-extensions: Strict StrictData
    ghc-options:        -Wall
    build-depends:
        base >=4.12 && <5,
        containers,
        stm

test-suite spec
    type:             exitcode-stdio-1.0
    main-is:          test/Spec.hs
    other-modules:
        System.TimeManager,
        System.TimeManager.Internal
    build-depends:    base
    default-language: Haskell2010
    ghc-options:      -Wall -threaded
    build-depends:
        base >=4.12 && <5,
        hspec,
        HUnit
