name:                tls-session-manager
version:             0.0.0.2
synopsis:            In-memory TLS session manager
description:         TLS session manager with limitation, automatic pruning, energy saving and replay resistance
license:             BSD3
license-file:        LICENSE
author:              Kazu Yamamoto
maintainer:          kazu@iij.ad.jp
-- copyright:
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >= 1.10

library
  exposed-modules:     Network.TLS.SessionManager
  other-modules:       Network.TLS.Imports
  -- other-extensions:
  build-depends:       base >= 4.7 && < 5
                     , auto-update
                     , clock
                     , psqueues >= 0.2.3
                     , tls
  -- hs-source-dirs:
  default-language:    Haskell2010
  ghc-options:       -Wall
