name:            wai-app-static
version:         1.3.0.4
license:         MIT
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        WAI application for static serving
description:     Also provides some helper functions and datatypes for use outside of WAI.
category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.8
build-type:      Simple
homepage:        http://www.yesodweb.com/book/wai
Extra-source-files:
  images/folder.png
  images/haskell.png
  test/WaiAppStaticTest.hs
  test/a/b
  tests.hs

Flag print
    Description:   print debug info
    Default:       False

library
    build-depends:   base                      >= 4        && < 5
                   , wai                       >= 1.3      && < 1.4
                   , bytestring                >= 0.9.1.4
                   , http-types                >= 0.7      && < 0.8
                   , transformers              >= 0.2.2    && < 0.4
                   , unix-compat               >= 0.2
                   , directory                 >= 1.0.1
                   , containers                >= 0.2
                   , time                      >= 1.1.4
                   , old-locale                >= 1.0.0.2
                   , file-embed                >= 0.0.3.1  && < 0.1
                   , text                      >= 0.7
                   , blaze-builder             >= 0.2.1.4  && < 0.4
                   , base64-bytestring         >= 0.1
                   , cryptohash                >= 0.7      && < 0.8
                   , system-filepath           >= 0.4      && < 0.5
                   , system-fileio             >= 0.3      && < 0.4
                   , http-date
                   , blaze-html                >= 0.5      && < 0.6
                   , blaze-markup              >= 0.5.1    && < 0.6
                   , crypto-conduit            >= 0.4      && < 0.5
                   , cereal                    >= 0.3.5
                   , mime-types                >= 0.1      && < 0.2

    exposed-modules: Network.Wai.Application.Static
                     WaiAppStatic.Storage.Filesystem
                     WaiAppStatic.Storage.Embedded
                     WaiAppStatic.Listing
                     WaiAppStatic.Types
    other-modules:   Util
    ghc-options:     -Wall
    extensions:     CPP

    if flag(print)
      cpp-options:  -DPRINT

test-suite runtests
    hs-source-dirs: test
    main-is: ../tests.hs
    type: exitcode-stdio-1.0

    build-depends:   base                      >= 4        && < 5
                   , hspec                     >= 1.3
                   , unix-compat
                   , time
                   , old-locale
                   , http-date
                   , wai-app-static            >= 1.3
                   , wai-test
                   , wai
                   , http-types
                   , network
                   , bytestring
                   , text
                   , transformers
                   , mime-types
                   -- , containers
  ghc-options:   -Wall

source-repository head
  type:     git
  location: git://github.com/yesodweb/wai.git
