name:            wai-app-static
version:         3.1.7.4
license:         MIT
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>, Greg Weber <greg@gregweber.info>
synopsis:        WAI application for static serving
description:     API docs and the README are available at <http://www.stackage.org/package/wai-app-static>.
category:        Web, Yesod
stability:       Stable
cabal-version:   >= 1.10
build-type:      Simple
homepage:        http://www.yesodweb.com/book/web-application-interface
Extra-source-files:
  images/folder.png
  images/haskell.png
  test/*.hs
  test/a/b
  tests.hs
  README.md
  ChangeLog.md

Flag print
    Description:   print debug info
    Default:       False

Flag cryptonite
    Description:   Use the cryptonite library for MD5 computation
    Default:       True

library
    default-language: Haskell2010
    build-depends:   base                      >= 4.12     && < 5
                   , wai                       >= 3.0      && < 3.3
                   , bytestring                >= 0.10.4
                   , http-types                >= 0.7
                   , transformers              >= 0.2.2
                   , unix-compat               >= 0.2
                   , directory                 >= 1.0.1
                   , containers                >= 0.2
                   , time                      >= 1.1.4
                   , old-locale                >= 1.0.0.2
                   , file-embed                >= 0.0.3.1
                   , text                      >= 0.7
                   , http-date
                   , blaze-html                >= 0.5
                   , blaze-markup              >= 0.5.1
                   , mime-types                >= 0.1      && < 0.2
                   , unordered-containers      >= 0.2
                   , template-haskell          >= 2.7
                   , zlib                      >= 0.5
                   , filepath
                   , wai-extra                 >= 3.0      && < 3.2
                   , optparse-applicative      >= 0.7
                   , warp                      >= 3.0.11   && < 3.4
    if flag(cryptonite)
      build-depends: cryptonite                >= 0.6
                   , memory                    >= 0.7
    else
      build-depends: base64-bytestring         >= 0.1
                   , cryptohash-md5            >= 0.11.101

    exposed-modules: Network.Wai.Application.Static
                     WaiAppStatic.Storage.Filesystem
                     WaiAppStatic.Storage.Embedded
                     WaiAppStatic.Listing
                     WaiAppStatic.Types
                     WaiAppStatic.CmdLine
    other-modules:   Util
                     WaiAppStatic.Storage.Embedded.Runtime
                     WaiAppStatic.Storage.Embedded.TH
    ghc-options:     -Wall

    if flag(print)
      cpp-options:  -DPRINT

Executable warp
  default-language: Haskell2010
  Main-is:        warp-static.hs
  hs-source-dirs: app
  Build-depends: base            >= 4                  && < 5
               , wai-app-static
               , directory       >= 1.0
               , containers      >= 0.2
               , bytestring      >= 0.10.4
               , text            >= 0.7
               , mime-types      >= 0.1                && < 0.2

test-suite runtests
    default-language: Haskell2010
    hs-source-dirs: test
    main-is: ../tests.hs
    type: exitcode-stdio-1.0

    build-depends:   base                      >= 4        && < 5
                   , hspec                     >= 1.3
                   , unix-compat
                   , time
                   , old-locale
                   , http-date
                   , wai-app-static
                   , wai-extra
                   , wai
                   , http-types
                   , network
                   , bytestring
                   , text
                   , transformers
                   , mime-types
                   , zlib
                   , filepath
                   , temporary
                   , mockery
                   -- , containers
    ghc-options:   -Wall

source-repository head
  type:     git
  location: git://github.com/yesodweb/wai.git
