name:                wai-conduit
version:             3.0.0.4
synopsis:            conduit wrappers for WAI
description:         API docs and the README are available at <http://www.stackage.org/package/wai-conduit>.
homepage:            https://github.com/yesodweb/wai
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com
category:            Web, Conduit
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md ChangeLog.md

library
  exposed-modules:     Network.Wai.Conduit
  build-depends:       base            >= 4      && < 5
                     , wai             >= 3.0    && < 3.3
                     , conduit
                     , transformers
                     , bytestring      >= 0.10.4
                     , http-types
  default-language:    Haskell2010
