name:                wai-devel
version:             0.0.0.2
synopsis:            A web server for the development of WAI compliant web applications.
description:         A development server for WAI applications.
homepage:            https://github.com/urbanslug/wai-devel
license:             GPL-3
license-file:        LICENSE
author:              Njagi Mwaniki
maintainer:          njagi@urbanslug.com
-- copyright:           
category:            Web
build-type:          Simple
extra-source-files:  refreshing.html
cabal-version:       >=1.10

library
  ghc-options:         -Wall
  exposed-modules:     Devel
                     , Main
                     , Devel.Watch
                     , Devel.CmdArgs
                     , Devel.ReverseProxy
                     , Devel.Config
                     , Devel.Compile
                     , Devel.Types
                     , Devel.Build
  other-modules:       Devel.Paths
                     , Devel.Modules

  -- other-extensions:
  build-depends:       base >= 4.7 && <5.0
                     , Cabal-ide-backend >= 1.23 && < 1.24
                     , Glob >= 0.7 && < 0.8
                     , MissingH >= 1.3 && < 1.4
                     , array >= 0.5 && < 0.6
                     , blaze-html >= 0.8 && < 0.9
                     , bytestring >= 0.10 && < 0.11
                     , directory >= 1.2 && < 1.3
                     , filepath >= 1.3 && < 1.5
                     , fsnotify >= 0.1 && < 0.3
                     , ghc >= 7.8 && < 7.12
                     , http-client >= 0.4 && < 0.5
                     , http-conduit >= 2.1 && < 2.2
                     , http-reverse-proxy >= 0.4 && < 0.5
                     , http-types >= 0.8 && < 0.9
                     , ide-backend >= 0.10 && < 0.11
                     , network >= 2.6 && < 2.7
                     , optparse-applicative >= 0.11 && < 0.12
                     , process >= 1.2 && < 1.3
                     , shakespeare >= 2.0 && < 2.1
                     , stm >= 2.4 && < 2.5
                     , streaming-commons >= 0.1 && < 0.2
                     , system-filepath >= 0.4 && < 0.5
                     , text >= 1.2 && < 1.3
                     , time >= 1.4 && < 1.6
                     , transformers >= 0.3 && < 0.5
                     , wai >= 3.0 && < 3.1
                     , warp >= 3.0 && < 3.2
                     , file-embed >= 0.0 && < 0.1
                     , websockets >= 0.9 && < 1.1

  hs-source-dirs:      src
  default-language:    Haskell2010

executable wai-devel
  ghc-options:         -Wall
  main-is:             Main.hs
  other-modules:       Devel
                       Devel.CmdArgs
                       Devel.Build
                       Devel.Compile
                       Devel.Config
                       Devel.Modules
                       Devel.Paths
                       Devel.ReverseProxy
                       Devel.Types
                       Devel.Watch
  -- other-extensions:
  build-depends:       base
                     , Cabal-ide-backend
                     , Glob
                     , MissingH
                     , blaze-html
                     , bytestring
                     , directory
                     , filepath
                     , fsnotify
                     , ghc
                     , http-client
                     , http-conduit
                     , http-reverse-proxy
                     , http-types
                     , ide-backend
                     , network
                     , optparse-applicative
                     , process
                     , shakespeare
                     , stm
                     , streaming-commons
                     , system-filepath
                     , text
                     , time
                     , transformers
                     , wai
                     , wai-devel
                     , warp
                     , file-embed
                     , websockets

  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  -- exposed-modules:   
  -- other-modules:       Tests.Watch
  hs-source-dirs:      tests
  build-depends:       base
                     , hspec >= 2.1 && < 3.0
                     , stm
                     , wai-devel
  default-language:    Haskell2010
